--- a/src/main/resources/language_ru.properties
+++ b/src/main/resources/language_ru.properties
@@ -1,7 +1,7 @@
 invalid-username=Логин должен начинаться с буквы. Может содержать цифры!
 invalid-password=Длина пароля должна быть >=8 и начинаться с буквы!
 invalid-email=Неверный email!
-invalid-firstname/surname=Има и Фамилися должны состоять из букв!
+invalid-firstname/surname=Имя и Фамилися должны состоять из букв!
 userExist=Такой пользователь уже существует!
 loginError=Неправильный логин или пароль!
 
